{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 18,
  "lineage": "e9caca42-3628-a9e2-2565-94d06c77b3e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:internet-gateway/igw-008bb48aec88f80b1",
            "id": "igw-008bb48aec88f80b1",
            "owner_id": "378471046835",
            "tags": {
              "Name": "ecs_vpc-igw"
            },
            "tags_all": {
              "Name": "ecs_vpc-igw"
            },
            "vpc_id": "vpc-0028c2bf75e242224"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:378471046835:loadbalancer/app/app-load-balancer/c007f3dbe2980468",
            "arn_suffix": "app/app-load-balancer/c007f3dbe2980468",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-load-balancer-1143576695.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:378471046835:loadbalancer/app/app-load-balancer/c007f3dbe2980468",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0892ddf705d63c525"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05ed978f08d7e0d87"
              },
              {
                "subnet_id": "subnet-075e9d58e3e230719"
              }
            ],
            "subnets": [
              "subnet-05ed978f08d7e0d87",
              "subnet-075e9d58e3e230719"
            ],
            "vpc_id": "vpc-0028c2bf75e242224",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:378471046835:listener/app/app-load-balancer/c007f3dbe2980468/eb2726588c87f3ef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:378471046835:targetgroup/app-target-group/e220fb491bf19ae0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:378471046835:listener/app/app-load-balancer/c007f3dbe2980468/eb2726588c87f3ef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:378471046835:loadbalancer/app/app-load-balancer/c007f3dbe2980468",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:378471046835:targetgroup/app-target-group/e220fb491bf19ae0",
            "arn_suffix": "targetgroup/app-target-group/e220fb491bf19ae0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:378471046835:targetgroup/app-target-group/e220fb491bf19ae0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:378471046835:loadbalancer/app/app-load-balancer/c007f3dbe2980468"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0028c2bf75e242224"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:route-table/rtb-0f1a2047ff5def059",
            "id": "rtb-0f1a2047ff5def059",
            "owner_id": "378471046835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008bb48aec88f80b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs_vpc-route-table"
            },
            "tags_all": {
              "Name": "ecs_vpc-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0028c2bf75e242224"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0f9dc9da951639c",
            "route_table_id": "rtb-0f1a2047ff5def059",
            "subnet_id": "subnet-075e9d58e3e230719"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_vpc",
            "aws_route_table.ecs_vpc",
            "aws_subnet.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7e399742dcfe4fc",
            "route_table_id": "rtb-0f1a2047ff5def059",
            "subnet_id": "subnet-05ed978f08d7e0d87"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_vpc",
            "aws_route_table.ecs_vpc",
            "aws_subnet.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:security-group/sg-0892ddf705d63c525",
            "description": "Allow inbound traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0892ddf705d63c525",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "378471046835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0028c2bf75e242224"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:security-group/sg-0fffd08fac81ddef1",
            "description": "Allow inbound traffic to ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fffd08fac81ddef1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_service_sg",
            "name_prefix": "",
            "owner_id": "378471046835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_service_sg"
            },
            "tags_all": {
              "Name": "ecs_service_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0028c2bf75e242224"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:subnet/subnet-075e9d58e3e230719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075e9d58e3e230719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378471046835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_vpc-subnet-0"
            },
            "tags_all": {
              "Name": "ecs_vpc-subnet-0"
            },
            "vpc_id": "vpc-0028c2bf75e242224"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:subnet/subnet-05ed978f08d7e0d87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ed978f08d7e0d87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378471046835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_vpc-subnet-1"
            },
            "tags_all": {
              "Name": "ecs_vpc-subnet-1"
            },
            "vpc_id": "vpc-0028c2bf75e242224"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:vpc/vpc-0028c2bf75e242224",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00cdb4ab651105cca",
            "default_route_table_id": "rtb-0182b51286a6c42ac",
            "default_security_group_id": "sg-0ccfe8ccebc4869a0",
            "dhcp_options_id": "dopt-0aea9e766ef934738",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0028c2bf75e242224",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0182b51286a6c42ac",
            "owner_id": "378471046835",
            "tags": {
              "Name": "ecs_vpc"
            },
            "tags_all": {
              "Name": "ecs_vpc"
            }
          }
        }
      ]
    }
  ]
}